<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="2dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_product_shopping_basket"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/image_product_shopping_basket"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/image_product_shopping_basket"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_product_shopping_basket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/short_description_product_shopping_basket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textDirection="rtl" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/warranty_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/warranty"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/digikala_txt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/seller"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/product_count_spinner_shopping_basket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/digikala_txt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/count"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear"
            android:layout_marginTop="16dp"
            android:background="@color/cardViewBackground">

            <ImageView
                android:id="@+id/seperator2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@color/strokeCardView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="8dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/price_shopping_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/price_sample" />

            <TextView
                android:id="@+id/amazing_suggestion_text_shopping_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_shopping_basket"
                android:layout_alignParentEnd="true"
                android:padding="8dp"
                android:text="@string/amazing_suggestion_price"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/discount_price__shopping_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_shopping_basket"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/price_sample"
                android:textColor="@color/colorPrimary" />

            <ImageView
                android:id="@+id/seperator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/discount_price__shopping_basket"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@color/strokeCardView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seperator"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:text="@string/final_price"
                android:textColor="@color/priceColor" />

            <TextView
                android:id="@+id/final_price_shopping_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seperator"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/price_sample"
                android:textColor="@color/priceColor" />

            <ImageView
                android:id="@+id/seperator3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/final_price_shopping_basket"
                android:scaleType="fitXY"
                android:src="@color/strokeCardView" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/delete_product_shopping_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/delete"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </RelativeLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>