<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.fragment.ShoppingBasketFragment">
<ProgressBar
    android:id="@+id/progress_bar_shopping_basket"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"/>


    <TextView
        android:id="@+id/empty_text_shopping_basket"
        android:textStyle="bold"
        android:textColor="@color/relateProductTitle"
        android:visibility="gone"
        android:maxLines="1"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/empty_basket"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_shopping_basket"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_toolbar_shopping_basket"
                android:padding="8dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_margin="8dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_clear_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true" />

            <TextView
                android:text="@string/your_basket"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/title_basket_fragment"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/back_toolbar_shopping_basket"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/basket_img"
                android:padding="8dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_shopping_24dp_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true" />


            <TextView
                android:id="@+id/basket_badge_shopping_basket"
                android:layout_marginStart="18dp"
                android:background="@drawable/badge_shape"
                android:visibility="invisible"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="end|top"
                android:layout_marginEnd="-5dp"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:padding="3dp"
                android:textColor="@color/colorPrimary"
                android:text="0"
                android:textStyle="bold"
                android:textSize="10sp"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.card.MaterialCardView
        app:cardElevation="4dp"
        android:id="@+id/cardView_shopping_basket"
        android:layout_below="@id/toolbar_shopping_basket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/basket_relative"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/priceColor"
                android:padding="12dp"
                android:layout_alignParentEnd="true"
                android:text="@string/sum_of_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="16sp"
                android:id="@+id/sum_basket_price_shopping_basket"
                android:textStyle="bold"
                android:textColor="@color/priceColor"
                android:padding="12dp"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basket_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/finalize_basket"
        android:layout_below="@id/cardView_shopping_basket"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="0dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/priceColor"
        android:gravity="center"
        android:id="@+id/finalize_basket"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:layout_marginEnd="4dp"
            app:srcCompat="@drawable/ic_chevron_left_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/finalize_txt"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/finalize_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</RelativeLayout>