<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/productBackGroundColor"
    android:orientation="vertical"
    tools:context=".controller.fragment.ProductListFragment">

    <TextView
        android:id="@+id/empty_list_text_product_list_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/empty_product_list"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_toolbar_product_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

            <TextView
                android:id="@+id/toolbar_product_list_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="-3dp"
                android:layout_marginEnd="11dp"
                android:layout_toStartOf="@+id/back_toolbar_product_list"
                android:layout_toEndOf="@id/search_img_product_list_fragment"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textDirection="rtl"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/search_img_product_list_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/basket_img_product_list_fragment"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_search_24dp" />

            <ImageView
                android:id="@+id/basket_img_product_list_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_shopping_24dp_gray" />


            <TextView
                android:id="@+id/basket_badge_product_list_fragment"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="end|top"
                android:layout_marginStart="18dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="-5dp"
                android:background="@drawable/badge_shape"
                android:gravity="center"
                android:padding="3dp"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:textStyle="bold"
                android:visibility="invisible" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/sort_filter_card"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/toolbar"
        android:background="@color/white"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/filter_relativelayout_product_list_fragment"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="32dp">

                <ImageView
                    android:id="@+id/filter_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_filter_list_black_24dp" />

                <TextView
                    android:id="@+id/filter_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@id/filter_img"
                    android:text="@string/filter_txt"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/filter_txt"
                    android:layout_toStartOf="@id/filter_img"
                    android:text="@string/example_filter"
                    android:textSize="12sp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/seperator"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/filter_relativelayout_product_list_fragment"
                android:scaleType="fitXY"
                android:src="@color/strokeCardView" />

            <RelativeLayout
                android:id="@+id/sort_relativelayout_product_list_fragment"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginEnd="32dp"
                android:layout_toStartOf="@id/seperator">

                <ImageView
                    android:id="@+id/sort_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_sort_black_24dp" />

                <TextView
                    android:id="@+id/sort_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@id/sort_img"
                    android:text="@string/sort_txt"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sub_sort_text_product_list_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sort_txt"
                    android:layout_toStartOf="@id/sort_img"
                    android:text="@string/most_visiting"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_list_recyclerView_product_list_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sort_filter_card"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar_product_list_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />


</RelativeLayout>